Quick hack to fix awkward transparent gap beneath side menu

--- a/styles/desktop.scss
+++ b/styles/desktop.scss
@@ -83,11 +83,18 @@ html {
   main {
     display: grid;
     grid-template-columns: 200px 1fr;
+    #underheader {
+      grid-column: 1;
+      grid-row: 2 / 100;
+      background-color: $background;
+      height: 100vh;
+      z-index: 98;
+    }
     section {
       display: grid;
       align-content: center;
       text-align: center;
-      grid-column: 2/3;
+      grid-column: 2;
       margin: 0;
       padding: 0;
       width: 100%;
@@ -142,7 +149,7 @@ html {
       justify-items: start;
       padding: 4em;
       .title {
-        margin-left: 55px;
+        margin-left: 30px;
         grid-column: 1/3;
       }
       p {
